--- a/generic.html
+++ b/generic.html
@@ -15,8 +15,7 @@
 		<nav id="nav">
 			<a href="index.html">首页</a>
 			<a href="generic.html">产品介绍</a>
-			<a href="http://bbs.jexo.yzxx-soft.com/">社区</a>
-			<a href="https://github.com/jwangkun/jexo">GitHub</a>
+			<a href="https://github.com/jwangkun/jeexo">GitHub</a>
 		</nav>
 		<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 	</div>
